--- a/index.html
+++ b/index.html
@@ -9,30 +9,15 @@
   <body>
     <div id="adapter">
       <div class="options">
-        <label>
-          <span>Font-size</span>
-          <input type="range" value="0" min="0" max="100" data-range="size" />
-        </label>
-        <label>
-          <span>Letter-spacing</span>
-          <input
-            type="range"
-            value="0"
-            min="0"
-            max="100"
-            data-range="spacing"
-          />
-        </label>
-        <label>
-          <span>Line-height</span>
-          <input type="range" value="0" min="0" max="100" data-range="height" />
-        </label>
+        <input type="range" value="0" min="0" max="100" data-range="size" />
+        <input type="range" value="0" min="0" max="100" data-range="spacing" />
+        <input type="range" value="0" min="0" max="100" data-range="height" />
         <select data-range="font">
           <option value="Roboto">Roboto</option>
           <option value="Noto-Sans">Noto-Sans</option>
         </select>
       </div>
-      <textarea class="js-adapter-textarea"></textarea>
+      <textarea data-range="textarea"></textarea>
     </div>
 
     <script src="font-adapter.js"></script>
